--- a/_bibliography/lichess.bib
+++ b/_bibliography/lichess.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@inproceedings{2024:biemer:solution-path-heuristics-predicting-difficulty-enjoyment-ratings-roguelike-level-segments,
+@inproceedings{biemer:2024:solution-path-heuristics-predicting-difficulty-enjoyment-ratings-roguelike-level-segments,
   title         = {Solution Path Heuristics for Predicting Difficulty and Enjoyment Ratings of Roguelike Level Segments},
   author        = {Biemer, Colan and Cooper, Seth},
   year          = 2024,
