--- a/_bibliography/lichess.bib
+++ b/_bibliography/lichess.bib
@@ -678,3 +678,61 @@
   urldate       = {2025-03-14},
 }
 
+@inproceedings{krishnan:2022:automatic-synthesis-interpretable-chess-tactics,
+  title         = {Towards the automatic synthesis of interpretable chess tactics},
+  author        = {Krishnan, Abhijeet and Martens, Chris},
+  year          = {2022},
+  month         = {03},
+  booktitle     = {Proceedings of the Explainable Agency in Artificial Intelligence Workshop, 36th AAAI Conference on Artificial Intelligence},
+  publisher     = {American Association of Artificial Intelligence},
+  pages         = {91--97},
+}
+
+@inproceedings{krishnan:2022:synthesizing-interpretable-chess-tactics-player-games,
+  title         = {Synthesizing interpretable chess tactics from player games},
+  author        = {Krishnan, Abhijeet and Martens, Chris},
+  year          = {2022},
+  month         = {10},
+  booktitle     = {Proceedings of the Workshop on Artificial Intelligence for Strategy Games (SG) and Esports Analytics (EA), 18th AAAI Conference on Artificial Intelligence and Interactive Digital Entertainment},
+  publisher     = {American Association for Artificial Intelligence},
+}
+
+@misc{kuboki:2025:policies-multiple-skill-levels-better-strength-estimation-games,
+  title         = {Policies of Multiple Skill Levels for Better Strength Estimation in Games},
+  author        = {Kyota Kuboki and Tatsuyoshi Ogawa and Chu-Hsuan Hsueh and Shi-Jim Yen and Kokolo Ikeda},
+  year          = {2025},
+  url           = {https://arxiv.org/abs/2505.00279},
+  eprint        = {2505.00279},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG},
+}
+
+@inproceedings{kumar:2025:optimizing-ai-driven-chess-bots-strategies-balancing-performance-accuracy-computational-efficiency,
+  title         = {Optimizing AI-Driven Chess Bots: Strategies for Balancing Performance, Accuracy, and Computational Efficiency},
+  author        = {D, Girish Kumar and Shiva Kumar, K S and Rama Prasad, P Pani and Jalade, Sangamesh C and Praveen Kumar, C T M and D C, Subhashree},
+  year          = {2025},
+  booktitle     = {2025 4th International Conference on Distributed Computing and Electrical Circuits and Electronics (ICDCECE)},
+  pages         = {1--5},
+  doi           = {10.1109/ICDCECE65353.2025.11035271},
+  keywords      = {Accuracy;Monte Carlo methods;Computational modeling;Decision making;Reinforcement learning;Transformers;Computational efficiency;Artificial intelligence;Optimization;Engines;AI chess engine;reinforcement learning;monte carlo tree search (MCTS);deep learning;transformer-based models;proximal policy optimization (PPO)},
+}
+
+@article{kuperwajs:2024:learning-from-rewards-social-information-strategic-behavior,
+  title         = {Learning from rewards and social information in naturalistic strategic behavior},
+  author        = {Kuperwajs, Ionatan and van Opheusden, Bas and Russek, Evan and Griffiths, Tom},
+  year          = {2024},
+  month         = {Aug},
+  publisher     = {PsyArXiv},
+  doi           = {10.31234/osf.io/d8zje},
+  url           = {osf.io/preprints/psyarxiv/d8zje},
+}
+
+@article{kuperwajs:2025:exploring-resource-rational-planning-time-pressure-online-chess,
+  title         = {Exploring resource-rational planning under time pressure in online chess},
+  author        = {Kuperwajs, Ionatan and Russek, Evan and Schut, Lisa and Sagiv, Yotam and Mattar, Marcelo G and Ma, Wei Ji and Griffiths, Tom},
+  year          = {2025},
+  journal       = {Proceedings of the Annual Meeting of the Cognitive Science Society},
+  volume        = {47},
+  url           = {https://escholarship.org/uc/item/75b4m9c2},
+  abstract      = {Human planning is incredibly efficient. Even in complex situations with many possible courses of action, people are able to make good decisions. Recent proposals suggest that a primary contributor to this efficiency is the intelligent use of cognitive resources, but how people allocate these resources under time constraints is not fully understood. In this work, we conduct a resource-rational analysis of planning in a large data set of online chess games. We first demonstrate that players spent more time thinking when they had more time to do so, and that this effect was especially prevalent when computation was more valuable. Then, we show that additional time spent planning resulted in better selected moves when one existed, and compare between signals of general and immediate time pressure. Finally, we highlight the role of expertise in this setting. Our results provide evidence that people make resource-rational choices when planning under time pressure.},
+}
