--- a/_bibliography/lichess.bib
+++ b/_bibliography/lichess.bib
@@ -736,3 +736,343 @@
   url           = {https://escholarship.org/uc/item/75b4m9c2},
   abstract      = {Human planning is incredibly efficient. Even in complex situations with many possible courses of action, people are able to make good decisions. Recent proposals suggest that a primary contributor to this efficiency is the intelligent use of cognitive resources, but how people allocate these resources under time constraints is not fully understood. In this work, we conduct a resource-rational analysis of planning in a large data set of online chess games. We first demonstrate that players spent more time thinking when they had more time to do so, and that this effect was especially prevalent when computation was more valuable. Then, we show that additional time spent planning resulted in better selected moves when one existed, and compare between signals of general and immediate time pressure. Finally, we highlight the role of expertise in this setting. Our results provide evidence that people make resource-rational choices when planning under time pressure.},
 }
+
+@inproceedings{laarhoven:2022:transparent-cheat-detection-online-chess,
+  title         = {Towards Transparent Cheat Detection in Online Chess: An Application of Human and Computer Decision-Making Preferences},
+  author        = {Thijs Laarhoven and Aditya Ponukumati},
+  year          = {2022},
+  booktitle     = {Computers and Games - International Conference, {CG} 2022, Virtual Event, November 22-24, 2022, Revised Selected Papers},
+  publisher     = {Springer},
+  series        = {Lecture Notes in Computer Science},
+  volume        = {13865},
+  pages         = {163--180},
+  doi           = {10.1007/978-3-031-34017-8\_14},
+  url           = {https://doi.org/10.1007/978-3-031-34017-8\_14},
+  editor        = {Cameron Browne and Akihiro Kishimoto and Jonathan Schaeffer},
+}
+
+@inproceedings{le-louedec:2019:chess-player-attention-prediction,
+  title         = {Deep learning investigation for chess player attention prediction using eye-tracking and game data},
+  author        = {Justin Le Louedec and Thomas Guntz and James L. Crowley and Dominique Vaufreydaz},
+  year          = {2019},
+  booktitle     = {Proceedings of the 11th {ACM} Symposium on Eye Tracking Research {\&} Applications, {ETRA} 2019, Denver , CO, USA, June 25-28, 2019},
+  publisher     = {{ACM}},
+  pages         = {1:1--1:9},
+  doi           = {10.1145/3314111.3319827},
+  url           = {https://doi.org/10.1145/3314111.3319827},
+  editor        = {Krzysztof Krejtz and Bonita Sharif},
+}
+
+@inproceedings{lemes:2025:computer-vision-chess-game-automation,
+  title         = {Computer Vision for Chess Game Automation},
+  author        = {Leme{\v{s}}, Samir and Koli{\'{c}}, Mirhad and Tabak, Edin},
+  year          = {2025},
+  booktitle     = {New Technologies, Development and Application VIII},
+  publisher     = {Springer Nature Switzerland},
+  address       = {Cham},
+  pages         = {21--30},
+  isbn          = {978-3-031-95197-8},
+  editor        = {Karabegovi{\'{c}}, Isak and Kova{\v{c}}evi{\'{c}}, Ahmed and Mand{\v{z}}uka, Sadko},
+  abstract      = {In the modern age of computing and technology, computer vision has become a key aspect of numerous innovations and solutions that make everyday life easier. Object recognition in images is one area where computer vision can contribute to significant improvements. Playing chess, one of the oldest and most challenging intellectual games requires concentration and tactical thinking. In computer vision, automating the recognition of chessboards and figures can contribute to developing advanced chess applications, help users analyse games, or even enable a game with a computer based on real-world chess setups. This paper describes how the system for recognising chessboards and figures using computer vision techniques was developed and implemented. Through analysing existing methods, designing a new algorithm, and experimental evaluation, the goal is to create an accurate and efficient system that can recognise chess positions and individual figures based on images.},
+}
+
+@thesis{lennart:2024:few-shot-embedding-learning-approach-predicting-behvaior-individual-chess-players,
+  title         = {A Few-Shot Embedding Learning Approach for Predicting the Behavior of Individual Chess Players},
+  author        = {August, Lennart},
+  year          = {2024},
+  url           = {https://fse.studenttheses.ub.rug.nl/id/eprint/34065},
+  institution   = {University of Groningen},
+  type          = {Bachelor's thesis},
+  supervisor    = {Abreu, Steven and Jaeger, Herbert},
+  abstract      = {This study presents a few-shot embedding learning approach to predict the behavior of individual chess players, based on only 100 games. Traditional models have relied on extensive datasets, often requiring thousands of games to achieve accurate move predictions. In contrast, our method leverages a limited number of games to generate dense vector representations, or embeddings, that capture a player's unique style. We trained a neural network to create these embeddings and used them to predict subsequent moves. Our results indicate that the embedding model performs well across various player sets and can accurately identify players even at scale among a great player population, picking out players with 84\% accuracy from among 100k candidates. There are indications that including information on the clock situation during the game improves the embedding process, although our findings are inconclusive. Despite these limitations, our approach shows promise in making personalized chess training more accessible and highlights the potential for embedding learning in human-centered AI applications. Future work will aim to refine both the embedding and move prediction models and explore its application in other domains.},
+}
+
+@thesis{lequenne:2025:characterizing-chess-player-styles-neural-networks-embeddings-stockfish,
+  title         = {Characterizing Chess Player Styles with Neural Network Embeddings from Stockfish},
+  author        = {Lequenne, Victor},
+  year          = {2025},
+  url           = {https://hdl.handle.net/2078.2/42841},
+  institution   = {\'{E}cole polytechnique de Louvain, Universit\'{e} catholique de Louvain},
+  type          = {Master's thesis},
+  supervisor    = {Delvenne, Jean-Charles},
+  keywords      = {neural network, chess, PCA, t-SNE, MDS, Kmeans, kde},
+  abstract      = {This thesis investigates how neural networks can be used to analyze and compare chess player styles. Using the last layer of Stockfish's neural network, we process positions from historical World Chess Championships (1886–2024), as well as the 2024 World Blitz and Rapid Championships. We apply dimensionality reduction (PCA, t-SNE, MDS) and clustering (K-means) to build style-based player maps, measuring similarities through Jensen–Shannon divergence. Results show consistent stylistic signatures for some players--such as Firouzja and Dubov but may fail with others e.g. Nepomniachtchi. We also confirmed the evolution of chess player's still accros time. Though the approach is promising, limitations remain, especially in data size and the influence of forced lines. Still, this work lays a foundation for future stylometry studies and applications in AI driven chess training},
+}
+
+@article{maharaj:2022:gambits-theory-evidence,
+  title         = {Gambits: Theory and evidence},
+  author        = {Maharaj, Shiva and Polson, Nick and Turk, Christian},
+  year          = {2022},
+  journal       = {Applied Stochastic Models in Business and Industry},
+  volume        = {38},
+  number        = {4},
+  pages         = {572--589},
+  doi           = {https://doi.org/10.1002/asmb.2684},
+  url           = {https://onlinelibrary.wiley.com/doi/abs/10.1002/asmb.2684},
+  keywords      = {adversarial risk analysis, AI, AlphaZero, behavioral economics, behavioral game theory, behavioral science, chess gambits, decision-making, deep learning, neural network, Q learning, rationality, skewness preference, Stafford Gambit, Stockfish 14},
+  eprint        = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/asmb.2684},
+  abstract      = {Abstract Gambits are central to human decision-making. Our goal is to provide a theory of Gambits. A Gambit is a combination of psychological and technical factors designed to disrupt predictable play. Chess provides an environment to study gambits and behavioral game theory. Our theory is based on the Bellman optimality path for sequential decision-making. This allows us to calculate the Q\$\$ Q \$\$-values of a Gambit where material (usually a pawn) is sacrificed for dynamic play. On the empirical side, we study the effectiveness of a number of popular chess Gambits. This is a natural setting as chess Gambits require a sequential assessment of a set of moves (a.k.a. policy) after the Gambit has been accepted. Our analysis uses Stockfish 14.1 to calculate the optimal Bellman Q\$\$ Q \$\$-values, which fundamentally measures if a position is winning or losing. To test whether Bellman's equation holds in play, we estimate the transition probabilities to the next board state via a database of expert human play. This then allows us to test whether the Gambiteer is following the optimal path in his decision-making. Our methodology is applied to the popular Stafford and reverse Stafford (a.k.a. Boden–Kieretsky–Morphy) Gambit and other common ones including the Smith–Morra, Goring, Danish and Halloween Gambits. We build on research in human decision-making by proving an irrational skewness preference within agents in chess. We conclude with directions for future research.},
+}
+
+@inproceedings{makovec:2023:merging-neural-networks-traditional-evaluations-crazyhouse,
+  title         = {Merging Neural Networks with Traditional Evaluations in Crazyhouse},
+  author        = {Makovec, Anei and Pirker, Johanna and Guid, Matej},
+  year          = {2023},
+  booktitle     = {Advances in Computer Games: 18th International Conference, ACG 2023, Virtual Event, November 28–30, 2023, Revised Selected Papers},
+  location      = {Siegen, Germany},
+  publisher     = {Springer-Verlag},
+  address       = {Berlin, Heidelberg},
+  pages         = {15–25},
+  doi           = {10.1007/978-3-031-54968-7_2},
+  isbn          = {978-3-031-54967-0},
+  url           = {https://doi.org/10.1007/978-3-031-54968-7_2},
+  abstract      = {In the intricate landscape of game-playing algorithms, Crazyhouse stands as a complex variant of chess where captured pieces are reintroduced, presenting unique evaluation challenges. This paper explores a hybrid approach that combines traditional evaluation functions with neural network-based evaluations, seeking an optimal balance in performance. Through rigorous experimentation, including self-play, matchups against a variant of the renowned program, Go-deep experiments, and score deviations, we present compelling evidence for the effectiveness of a weighted sum of both evaluations. Remarkably, in our experiments, the combination of 75\% neural network and 25\% traditional evaluation consistently emerged as the most effective choice. Furthermore, we introduce the use of Best-Change rates, which have previously been associated with evaluation quality, in the context of Monte Carlo tree search-based algorithms.},
+  numpages      = {11},
+  keywords      = {Crazyhouse, chess variants, heuristic evaluation functions, neural networks, Best-Change rates, Monte Carlo tree search},
+}
+
+@inproceedings{maksim:2025:neural-network-approach-chess-cheat-detectoin,
+  title         = {A Neural Network Approach to Chess Cheat Detection},
+  author        = {Iavich, Maksim and Kevanishvili, Zura},
+  year          = {2025},
+  booktitle     = {Information and Software Technologies},
+  publisher     = {Springer Nature Switzerland},
+  address       = {Cham},
+  pages         = {131--145},
+  isbn          = {978-3-031-84263-4},
+  editor        = {Lopata, Audrius and Gudonien{\.{e}}, Daina and Butkien{\.{e}}, Rita and {\v{C}}eponis, Jonas},
+  abstract      = {With the development of chess engines, cheating online has never been easier, resulting in a need for more robust and accurate detection systems. This paper presents a novel approach to chess cheater detection that combines conventional chess engines and neural networks to help identify which games are authentically played by humans and which show signs of extraneous intervention. By utilizing Stockfish to measure centipawn loss and its mathematical derivatives, we can measure deviations from typical computer-generated moves much like in conventional anti-cheat systems. Additionally, the neural network Maia, designed specifically to mimic human play, transmutes centipawn loss data to highlight deviations from human style. This dual-measurement system addresses the limitations of the given traditional anti-cheat systems, which face the issue of distinguishing between strong human players and those using engines. The collected metadata is analyzed using a sequential neural network, which identifies patterns of fair play violation. Our approach offers a robust solution for maintaining the integrity of online chess by accurately detecting and preventing cheating.},
+}
+
+@article{martin:2025:re-evaluating-metamorphic-testing-chess-engines-replication-study,
+  title         = {Re-evaluating metamorphic testing of chess engines: A replication study},
+  author        = {Axel Martin and Djamel Eddine Khelladi and Th\'{e}o Matricon and Mathieu Acher},
+  year          = {2025},
+  journal       = {Information and Software Technology},
+  pages         = {107679},
+  doi           = {https://doi.org/10.1016/j.infsof.2025.107679},
+  issn          = {0950-5849},
+  url           = {https://www.sciencedirect.com/science/article/pii/S0950584925000187},
+  keywords      = {Reproducibility, Replicability, Metamorphic testing, Chess engines},
+  abstract      = {Context: This study aims to confirm, replicate and extend the findings of a previous article entitled ''Metamorphic Testing of Chess Engines'' that reported inconsistencies in the analyses provided by Stockfish, the most widely used chess engine, for transformed chess positions that are fundamentally identical. Initial findings, under conditions strictly identical to those of the original study, corroborate the reported inconsistencies. Objective: However, the original article considers a specific dataset (including randomly generated chess positions, end-games, or checkmate problems) and very low analysis depth (10 plies11A ply refers to a single turn taken by one player in a game. Two plies, one from each player, together constitute a complete move., corresponding to 5 moves). These decisions pose threats that limit generalizability of the results, but also their practical usefulness both for chess players and maintainers of Stockfish. Thus, we replicate the original study. Methods: We consider this time (1) positions derived from actual chess games, (2) analyses at appropriate and larger depths, and (3) different versions of Stockfish. We conduct novel experiments on thousands of positions, employing significantly deeper searches. Results: The replication results show that the Stockfish chess engines demonstrate significantly greater consistency in its evaluations. The metamorphic relations are not as effective as in the original article, especially on realistic chess positions. We also demonstrate that, for any given position, there exists a depth threshold beyond which further increases in depth do not result in any evaluation differences for the studied metamorphic relations. We perform an in-depth analysis to identify and clarify the implementation reasons behind Stockfish's inconsistencies when dealing with transformed positions. Conclusion: A first concrete result is thus that metamorphic testing of chess engines is not yet an effective technique for finding faults of Stockfish. Another result is the lessons learned through this replication effort: metamorphic relations must be verified in the context of the domain's specificities; without such contextual validation, they may lead to misleading or irrelevant conclusions; changes in parameters and input dataset can drastically alter the effectiveness of a testing method.},
+}
+
+@inproceedings{mcilroy-young:2020:aligning-superhuman-ai-human-behavior,
+  title         = {Aligning Superhuman {AI} with Human Behavior: Chess as a Model System},
+  author        = {Reid McIlroy{-}Young and Siddhartha Sen and Jon M. Kleinberg and Ashton Anderson},
+  year          = {2020},
+  booktitle     = {{KDD} '20: The 26th {ACM} {SIGKDD} Conference on Knowledge Discovery and Data Mining, Virtual Event, CA, USA, August 23-27, 2020},
+  publisher     = {{ACM}},
+  pages         = {1677--1687},
+  doi           = {10.1145/3394486.3403219},
+  url           = {https://doi.org/10.1145/3394486.3403219},
+  editor        = {Rajesh Gupta and Yan Liu and Jiliang Tang and B. Aditya Prakash},
+}
+
+@article{mcilroy-young:2020:learning-personalized-models-human-behavior-chess,
+  title         = {Learning Personalized Models of Human Behavior in Chess},
+  author        = {Reid McIlroy{-}Young and Russell Wang and Siddhartha Sen and Jon M. Kleinberg and Ashton Anderson},
+  year          = {2020},
+  journal       = {CoRR},
+  volume        = {abs/2008.10086},
+  url           = {https://arxiv.org/abs/2008.10086},
+  eprinttype    = {arXiv},
+  eprint        = {2008.10086},
+}
+
+@inproceedings{mcilroy-young:2021:chess-stylometry,
+  title         = {Detecting Individual Decision-Making Style: Exploring Behavioral Stylometry in Chess},
+  author        = {Reid McIlroy{-}Young and Yu Wang and Siddhartha Sen and Jon M. Kleinberg and Ashton Anderson},
+  year          = {2021},
+  booktitle     = {Advances in Neural Information Processing Systems 34: Annual Conference on Neural Information Processing Systems 2021, NeurIPS 2021, December 6-14, 2021, virtual},
+  pages         = {24482--24497},
+  url           = {https://proceedings.neurips.cc/paper/2021/hash/ccf8111910291ba472b385e9c5f59099-Abstract.html},
+  editor        = {Marc'Aurelio Ranzato and Alina Beygelzimer and Yann N. Dauphin and Percy Liang and Jennifer Wortman Vaughan},
+}
+
+@inproceedings{mcilroy-young:2022:learning-models-individual-behavior-chess,
+  title         = {Learning Models of Individual Behavior in Chess},
+  author        = {Reid McIlroy{-}Young and Russell Wang and Siddhartha Sen and Jon M. Kleinberg and Ashton Anderson},
+  year          = {2022},
+  booktitle     = {{KDD} '22: The 28th {ACM} {SIGKDD} Conference on Knowledge Discovery and Data Mining, Washington, DC, USA, August 14 - 18, 2022},
+  publisher     = {{ACM}},
+  pages         = {1253--1263},
+  doi           = {10.1145/3534678.3539367},
+  url           = {https://doi.org/10.1145/3534678.3539367},
+  editor        = {Aidong Zhang and Huzefa Rangwala},
+}
+
+@inproceedings{milosz:2024:predicting-puzzle-difficulty-transformers,
+  title         = {{Predicting Chess Puzzle Difficulty with Transformers}},
+  author        = {Szymon Mi{\l}osz and Pawe{\l} Kapusta},
+  year          = {2024},
+  booktitle     = {{IEEE} International Conference on Big Data, Big Data 2024, Washington DC, USA, December 15-18, 2024},
+  publisher     = {{IEEE}},
+}
+
+@article{miranda:2025:observational-analysis-mistakes-chess-initiation-decision-trees,
+  title         = {Observational Analysis of Mistakes in Chess Initiation, Using Decision Trees},
+  author        = {Miranda, Jorge and Arana, Javier and Lapresa, Daniel and Anguera, M. Teresa},
+  year          = {2025},
+  journal       = {International Journal of Computer Science in Sport},
+  volume        = {24},
+  number        = {2},
+  pages         = {45--60},
+  doi           = {10.2478/ijcss-2025-0012},
+  url           = {https://doi.org/10.2478/ijcss-2025-0012},
+}
+
+@article{mok:2021:time-online-digital-well-being,
+  title         = {The Complementary Nature of Perceived and Actual Time Spent Online in Measuring Digital Well-being},
+  author        = {Mok, Lillio and Anderson, Ashton},
+  year          = {2021},
+  month         = apr,
+  journal       = {Proc. ACM Hum.-Comput. Interact.},
+  publisher     = {Association for Computing Machinery},
+  address       = {New York, NY, USA},
+  volume        = {5},
+  number        = {CSCW1},
+  doi           = {10.1145/3449160},
+  url           = {https://doi.org/10.1145/3449160},
+  issue_date    = {April 2021},
+  abstract      = {As online platforms become ubiquitous, there is growing concern that their use can potentially lead to negative outcomes in users' personal lives, such as disrupted sleep and impacted social relationships. A central question in the literature studying these problematic effects is whether they are associated with the amount of time users spend on online platforms. This is often addressed by either analyzing self-reported measures of time spent online, which are generally inaccurate, or using objective metrics derived from server logs or tracking software. Nonetheless, how the two types of time measures comparatively relate to problematic effects -- whether they complement or are redundant with each other in predicting problematicity -- remains unknown. Additionally, transparent research into this question is hindered by the literature's focus on closed platforms with inaccessible data, as well as selective analytical decisions that may lead to reproducibility issues.In this work, we investigate how both self-reported and data-derived metrics of time spent relate to potentially problematic effects arising from the use of an open, non-profit online chess platform. These effects include disruptions to sleep, relationships, school and work performance, and self-control. To this end, we distributed a gamified survey to players and linked their responses with publicly-available game logs. We find problematic effects to be associated with both self-reported and data-derived usage measures to similar degrees. However, analytical models incorporating both self-reported and actual time explain problematic effects significantly more effectively than models with either type of measure alone. Furthermore, these results persist across thousands of possible analytical decisions when using a robust and transparent statistical framework. This suggests that the two methods of measuring time spent measure contain distinct, complementary information about problematic usage outcomes and should be used in conjunction with each other.},
+  articleno     = {86},
+  numpages      = {27},
+  keywords      = {online well-being, problematic platform use, specification curve analysis, survey methodology},
+}
+
+@phdthesis{mok:2024:measuring-digital-welfare-online-systems,
+  title         = {Measuring the Digital Welfare of Online Social Systems},
+  author        = {Mok, Lillio},
+  year          = {2024},
+  note          = {http://hdl.handle.net/1807/140863},
+  school        = {University of Toronto},
+  keywords      = {Computational Social Science, Data Science, Human-AI Interaction, Human-Computer Interaction, Web Science},
+  annote        = {We rely on all manners of digital systems to organize and facilitate our human functions. From social networks connecting us to each other, to content providers keeping us perpetually entertained, to search engines serving each of our informational needs, to computational models informing us how healthy we are, to artificially-intelligent coaches supplementing our natural intelligence, every corner of human existence is permeated by the digital tools we create. Accompanying the boons of these systems, however, are increasingly complex risks to our digital health. Our attention is pulled into cyberspace via algorithms that use billions of datapoints to learn what we like, sometimes to the detriment of our physical wellness. Ideological rifts online threaten our societal harmony as partisans become ever more polarized, whose obsession with political content in turn feeds the underbelly of our social media ecosystem. All the while, the same data underpinning these online interactions also allow others to make finely-optimized decisions about us, often to the detriment of the disadvantaged. This thesis offers a more optimistic vision: that the same computational infrastructure powering our potentially perilous systems can be repurposed to help us understand their perils. We first outline a framework for rigorously assessing the welfare of our digital systems through the well-being of individual users, the cohesion of user communities, and whether the systems themselves deserve trust. We then utilize this framework to conduct four empirical studies measuring the extent to which digital welfare is preserved or endangered by data-driven systems. At the level of individual users, we directly measure how spending time on a large-scale chess platform, Lichess, can be perceived as detrimental to personal well-being. We find that perceived harms are explained not only by the time that people believe they spend online, but also the actual time they spend engaging with the platform. For groups of users, we quantify how partisan users on the Reddit platform are selective towards politically-congruent news outlets, thus consuming and disseminating polarized news. Despite the platform appearing polarized on aggregate, we discover that narrow, hyper-partisan communities are responsible for deeply-ingrained ideological segregation. We then extend this result by identifying whether key individuals can influence the news consumption cycle on Reddit. Through an analysis of where news about political figures is shared on Reddit and the language it attracts, we illustrate that nationally-recognizable politicians are selectively discussed more by in-group online communities than they are by in-group news outlets. Out-group communities, on the other hand, generate the most toxic and hateful commentary. At the level of problematic downstream outcomes, we further probe whether people can tell when systems like algorithmic risk assessments harm data subjects in unfair ways. We find that observers are easily distracted by who makes risk assessments rather than how equitable the assessments are, suggesting that the task of welfare measurement itself needs to be made accessible for laypeople at large. This thesis posits that the online social systems jeopardizing our collective welfare can also be used to understand the very dangers they pose. By empirically measuring how well people are doing when they use or are impacted by these systems, we in turn empirically demonstrate the feasibility of this ideal. We conclude by speculating on the imminent ubiquity of artificial intelligence in our cyber-environment and their implications for the work in this thesis.},
+  type          = {Doctoral Thesis},
+}
+
+@article{mondal:2025:adaptive-decision-making-in-the-wild-case-study-chess,
+  title         = {Adaptive decision making in the wild: a case study of chess},
+  author        = {Supratik Mondal and Jakub Traczyk},
+  year          = {2025},
+  journal       = {Thinking \& Reasoning},
+  publisher     = {Routledge},
+  volume        = {0},
+  number        = {0},
+  pages         = {1--21},
+  doi           = {10.1080/13546783.2025.2550306},
+  url           = {https://doi.org/10.1080/13546783.2025.2550306},
+  abstract      = {Chess is a game of strategic thinking and time management, where a player can lose a game on time despite making all the best moves. Finding the best move is a deliberate and energy-intensive process in a game where players are often under time pressure. Therefore, players who can balance this trade-off will have a significant advantage. The current study explores such instances where winning is contingent on how well players balance their accuracy under time pressure. We found that winning players, compared to their opponents, followed a more adaptive decision strategy--they made more theoretical best moves (i.e., accurate moves) in highly critical positions. However, the accuracy difference between the opponents was very similar in less critical positions. We conclude that winning players have a better understanding of when and how to allocate their limited resources efficiently, even when controlling for differences in skill levels, compared to their opponents.},
+  keyword       = {Chess, Adaptive Decision Making, Resource Constraints, Skilled Decision Maker, Evaluation},
+}
+
+@misc{morelbalbi:2025:learning-rank-estimation-partial-sparse-noisy-comparisons,
+  title         = {Learning when to rank: Estimation of partial rankings from sparse, noisy comparisons},
+  author        = {Sebastian Morel-Balbi and Alec Kirkley},
+  year          = {2025},
+  url           = {https://arxiv.org/abs/2501.02505},
+  eprint        = {2501.02505},
+  archiveprefix = {arXiv},
+  primaryclass  = {physics.soc-ph},
+}
+
+@inproceedings{muecke:2022:check-mate-sanity-check-trustworthy-ai,
+  title         = {Check Mate: {A} Sanity Check for Trustworthy {AI}},
+  author        = {Sascha M{\"{u}}cke and Lukas Pfahler},
+  year          = {2022},
+  booktitle     = {Proceedings of the {LWDA} 2022 Workshops: FGWM, FGKD, and FGDB, Hildesheim (Germany), Oktober 5-7th, 2022},
+  publisher     = {CEUR-WS.org},
+  series        = {{CEUR} Workshop Proceedings},
+  volume        = {3341},
+  pages         = {91--103},
+  url           = {https://ceur-ws.org/Vol-3341/KDML-LWDA\_2022\_CRC\_8977.pdf},
+  editor        = {Pascal Reuss and Viktor Eisenstadt and Jakob Michael Sch{\"{o}}nborn and Jero Sch{\"{a}}fer},
+}
+
+@inproceedings{mujagic:2024:predictive-analysis-chess-player-performance-maching-learning,
+  title         = {Predictive Analysis of Chess Player Performance: An Analysis of Factors Influencing Competitive Success Using Machine Learning Techniques},
+  author        = {Mujagi{\'{c}}, Amar and Mujagi{\'{c}}, Adnan and Mehanovi{\'{c}}, D{\v{z}}elila},
+  year          = {2024},
+  booktitle     = {Advanced Technologies, Systems, and Applications IX},
+  publisher     = {Springer Nature Switzerland},
+  address       = {Cham},
+  pages         = {392--408},
+  isbn          = {978-3-031-71694-2},
+  editor        = {Ademovi{\'{c}}, Naida and Ak{\v{s}}amija, Zlatan and Karabegovi{\'{c}}, Almir},
+  abstract      = {The world of competitive chess has long been a captivating arena for intellectual competition, where human intelligence, strategic thinking, and long-term planning converge. This study delves into the intricate web of factors that influence a chess player's competitive success through the lens of predictive modeling and machine learning techniques.},
+}
+
+BibTex
+@conference{munoz-hurtado:2025:mining-security-documentation-practices-openapi-descriptions,
+  title         = {Mining Security Documentation Practices in OpenAPI Descriptions},
+  author        = {Diana Carolina Mu{\~n}oz Hurtado and Souhaila Serbout and Cesare Pautasso},
+  year          = {2025},
+  month         = {March},
+  booktitle     = {22nd IEEE International Conference on Software Architecture (ICSA)},
+  address       = {Odense, Denmark},
+  abstract      = {Security is an integral requirement of any trustworthy software architecture, particularly critical for application programming interfaces (APIs). In this paper, we survey security documentation practices, specifically API security schemes related to authentication and authorization, by mining a large collection of OpenAPI descriptions retrieved from open-source GitHub repositories. Our study focuses on detecting existing security schemes and evaluating their prevalence and positioning within API descriptions. We distinguish whether security schemes are introduced locally (at the path or operation level) or globally (for the entire API). Our analysis highlights scenarios where security schemes are featured in APIs in different proportions over time, thus tracking whether the API documentation tends to include more (or less) security details as the API evolves.},
+  keywords      = {API Analytics, OpenAPI, Security},
+}
+
+@misc{narayanan:2023:improving-strength-human-models-chess,
+  title         = {Improving the Strength of Human-Like Models in Chess},
+  author        = {Saumik Narayanan and Kassa Korley and Chien-Ju Ho and Siddhartha Sen},
+  year          = {2023},
+  url           = {https://openreview.net/forum?id=fJY2iCssvIs},
+}
+
+@inproceedings{nguyen:2025:comparison-effects-model-adaptation-techniques-large-language-models-non-linguistic-tasks,
+  title         = {A Comparison of the Effects of Model Adaptation Techniques on Large Language Models for Non-Linguistic and Linguistic Tasks},
+  author        = {Nguyen, Khoa and Jahan, Sadia and Slavin, Rocky},
+  year          = {2025},
+  booktitle     = {Proceedings of the 40th ACM/SIGAPP Symposium on Applied Computing},
+  location      = {Catania International Airport, Catania, Italy},
+  publisher     = {Association for Computing Machinery},
+  address       = {New York, NY, USA},
+  series        = {SAC '25},
+  pages         = {936–944},
+  doi           = {10.1145/3672608.3707740},
+  isbn          = {9798400706295},
+  url           = {https://doi.org/10.1145/3672608.3707740},
+  abstract      = {Generative large language models (LLMs) have revolutionized natural language processing (NLP) by demonstrating exceptional performance in interpreting and generating human language. There has been some exploration of their application to non-linguistic tasks, which could lead to significant advancements in fields that rely heavily on structured data and specialized knowledge. However, there has been limited direct comparison of the effects of model adaptation techniques for non-linguistic compared to linguistic tasks with LLMs. To this end, the work in this paper investigates the effects of fine-tuning and few-shot learning on pre-trained LLMs for non-linguistic tasks using chess puzzles as a case study task. We compare the impact of fine-tuning and few-shot learning on models performing the same task represented in both chess notation (i.e., non-linguistic data) and natural language descriptions of the same chess notations (i.e., natural language data). Our experiments with Mixtral-8x7B-v0.1 and Meta-Llama-3-70B resulted in a 5\% lower average increase in performance after fine-tuning for non-linguistic tasks compared to linguistic tasks. Similarly, few-shot learning on pre-trained models exhibited a 3\% lower average increase in performance for on non-linguistic tasks compared to linguistic tasks. Furthermore, few-shot learning on fine-tuned models resulted in a significant accuracy drop, particularly for Mixtral, with a 24.82\% decrease for non-linguistic tasks. These results suggest that fine-tuning and few-shot learning for generative LLMs have stronger effects on linguistic tasks and their data than for non-linguistic.},
+  numpages      = {9},
+  keywords      = {large language models, natural language processing, model adaptation techniques},
+}
+
+@misc{nie:2024:discovering-high-quality-chess-puzzles-offline-reinforcement-learning,
+  title         = {Discovering High-Quality Chess Puzzles Through One Billion Plays with Offline Reinforcement Learning},
+  author        = {Allen Nie and Anirudhan Badrinath and Nicholas Tomlin and Timothy Dai and Carissa Yip and Rose E Wang and Emma Brunskill and Christopher J Piech},
+  year          = {2024},
+  url           = {https://openreview.net/forum?id=YKW98Icu1X},
+}
+
+@misc{nordby:2025:soft-prompts-evaluation-measuring-conditional-distance-capabilities,
+  title         = {Soft Prompts for Evaluation: Measuring Conditional Distance of Capabilities},
+  author        = {Ross Nordby},
+  year          = {2025},
+  url           = {https://arxiv.org/abs/2505.14943},
+  eprint        = {2505.14943},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG},
+}
+
+@thesis{o-rourke:2024:alternative-chess-rating-model-latent-variables,
+  title         = {An alternative chess rating model based on latent variables},
+  author        = {O'Rourke, Patrick},
+  year          = {2024},
+  note          = {http://dx.doi.org/10.13140/RG.2.2.18931.13604},
+  school        = {University College Dublin},
+  type          = {Master's thesis},
+  annote        = {The ranking of players and particularly of chess players has been a topic of debate throughout the last 80 years. Such exploration spawned what has become the benchmark of evaluating professional chess players since the 1970s: the Elo rating model. The Elo system, the first to have a sound statistical basis, was designed by Elo (1978) from the assumption that the performance of a player in a game is a normally distributed random variable Alliot (2017). However, this ranking model is not without its limitations and such has led to extreme rating deflation of the World Chess Federation (FIDE) Standard Elo rating system Sonas (2023). Such attention on the FIDE's rating mechanism has ignited focus on the Elo system's drawbacks which we will address in this dissertation.},
+}
+
+@misc{omori:2024:chess-rating-estimation-moves,
+  title         = {Chess Rating Estimation from Moves and Clock Times Using a CNN-LSTM},
+  author        = {Michael Omori and Prasad Tadepalli},
+  year          = {2024},
+  url           = {https://arxiv.org/abs/2409.11506},
+  eprint        = {2409.11506},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG},
+}
